fixing demo section alignment on mobile+desktop

--- a/src/components/mainPage/demo-section.css
+++ b/src/components/mainPage/demo-section.css
@@ -3,8 +3,7 @@
   flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 2rem;
-  margin-top: 3.5rem;
+  justify-content: space-around;
 }
 
 .demo-section h1 {
@@ -31,26 +30,27 @@
   background-color: #03a64a;
 }
 
-.container {
-  width: 100%;
+.demo-body-container {
+  width: auto;
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  align-items: center;
+  flex-flow: column wrap;
+  align-items: flex-start;
+  align-content: center;
   box-sizing: border-box;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 3rem;
 }
 
 .item-a {
-  display: block;
-  max-width: 31.25rem;
-  width: 100%;
+  display: inline-block;
+}
+
+.item-a p {
+  margin-bottom: 1rem;
 }
 
 .item-b {
-  align-content: center;
   width: 100%;
-  margin-block: 3rem;
   max-width: 31.25rem;
   max-height: 17.5rem;
 }
@@ -90,8 +90,24 @@
   }
 }
 
-@media only screen and (max-width: 600px) {
-  .container {
-    display: flex;
+@media only screen and (min-width: 1024px) {
+  .demo-section h1 {
+    font-size: 3.75rem;
+  }
+
+  .demo-body-container {
+    flex-flow: row nowrap;
+    width: 100%;
+    justify-content: space-between;
+    max-width: 80.625rem; /* 1290px */
+  }
+
+  .item-a {
+    max-width: 31.25rem;
+  }
+
+  .item-b {
+    margin-block: unset;
+    display: block;
   }
 }
